--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <title> Portfolio | Cody Hennessey </title>
   </head>
-  <body> id=home
+  <body id="About Me">
+    <p> My Name is Cody Hennessey, 
+      I am a senior at Florida Gulf Coast 
+      University currently pursuing a BS in 
+      Mathematics with a minor in Physics
+    </p> 
   
   
   </body>
