--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <title> Portfolio | Cody Hennessey </title>
   </head>
   <body id="About Me">
-    <p> My Name is Cody Hennessey, 
-      I am a senior at Florida Gulf Coast 
-      University currently pursuing a BS in 
-      Mathematics with a minor in Physics
-    </p> 
+    <h1> 
+      About Me
+    </h1>
+      <p> 
+        My Name is Cody Hennessey, 
+        I am a senior at Florida Gulf Coast 
+        University currently pursuing a BS in 
+        Mathematics with a minor in Physics
+      </p> 
   
   
   </body>
