--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
         University currently pursuing a BS in 
         Mathematics with a minor in Physics
       </p> 
+    <h2>
+      Noteworthy classes 
+    </h2>
+      <ul>
+        <li> Abstract Algebra (two semester sequence) </li>
+        <li> Real Analysis (also two semesters) </li>
+        <li> Operations Research </li>
+        <li> Math for Scinece and Engineering </li>
+        <li> History of Math </li>
+        <li> Entire Calculus Sequence </li>
+        <li> Differential Eqeuations </li>
+        <li> Linear Algebra </li>
+        <li> Newtonian Mechanics </li>
+        <li> Electricity and Magnetism </li>
+</ul>  
   
   
   </body>
