--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
         My Name is Cody Hennessey, 
         I am a senior at Florida Gulf Coast 
         University currently pursuing a BS in 
-        Mathematics with a minor in Physics
+        Mathematics with a minor in Physics. My 
+        main areas of focus are in Point Set 
+        Topology, large scale Cosmology, and Algebraic 
+        Topology in relation to grand unified theories 
+        such as M-Theort and Loop Quantum Gravity.
       </p> 
+      <p>
+        My short term goals include pursuing a Ph.D in 
+        one of the fields listed above and then 
+        researching in said field.
+      </p>
     <h2>
       Noteworthy classes 
     </h2>
