--- a/index.html
+++ b/index.html
@@ -10,20 +10,37 @@
       About Me
     </h1>
       <p> 
-        My Name is Cody Hennessey, 
+        My name is Cody Hennessey, 
         I am a senior at Florida Gulf Coast 
         University currently pursuing a BS in 
         Mathematics with a minor in Physics. My 
         main areas of focus are in Point Set 
         Topology, large scale Cosmology, and Algebraic 
         Topology in relation to grand unified theories 
-        such as M-Theort and Loop Quantum Gravity.
+        such as M-Theory and Loop Quantum Gravity.
       </p> 
       <p>
-        My short term goals include pursuing a Ph.D in 
+        My short term goal is to pursue a Ph.D in 
         one of the fields listed above and then 
-        researching in said field.
+        research in said field. It would be an honor 
+        to be able to contribute to both the Mathematics 
+        and Physics communities in any form, for knowledge 
+        is the greatest power a person (and society) can 
+        have. 
       </p>
+      <p>
+        The approach i have on problems in the field of Physics 
+        (and hence mathematics as well) Is that of pure unbias. 
+        This is of cours with the constrictions all humans have 
+        on their perception of the world around them, but this 
+        isnt a metaphysics discussion blog so I digress... 
+        The principles some veterans in the feilds of General 
+        Relativety and Qunatum mechanics may hold as concrete 
+        fact, i still consider to be Theory. Well testec and 
+        verified theory at that, but alas, still theory.  
+        Similarly, i respect newer fields such as M-Theory and 
+        Loop Quantum Gravity with similar consideration 
+        (with slightly more skepticism of course.)
     <h2>
       Noteworthy classes 
     </h2>
