--- a/index.html
+++ b/index.html
@@ -29,20 +29,22 @@
         have. 
       </p>
       <p>
-        The approach i have on problems in the field of Physics 
+        The approach I have on problems in the field of Physics 
         (and hence mathematics as well) Is that of pure unbias. 
         This is of cours with the constrictions all humans have 
         on their perception of the world around them, but this 
         isnt a metaphysics discussion blog so I digress... 
         The principles some veterans in the feilds of General 
         Relativety and Qunatum mechanics may hold as concrete 
-        fact, i still consider to be Theory. Well testec and 
+        fact, i still consider to be Theory. Well tested and 
         verified theory at that, but alas, still theory.  
-        Similarly, i respect newer fields such as M-Theory and 
+        Similarly, I respect newer fields such as M-Theory and 
         Loop Quantum Gravity with similar consideration 
-        (with slightly more skepticism of course.)
+        (with slightly more skepticism of course) and am quite 
+        interested in the extensive applications they could have 
+        in the future.
     <h2>
-      Noteworthy classes 
+      Noteworthy Classes 
     </h2>
       <ul>
         <li> Abstract Algebra (two semester sequence) </li>
@@ -56,6 +58,10 @@
         <li> Newtonian Mechanics </li>
         <li> Electricity and Magnetism </li>
 </ul>  
+    <h3>
+      Check Out My Sample Work:
+      Paper on the history of Hyperbolic Geometry: 
+      <a href="Hyperbolic Research MHF-4404.pdf"></a>
   
   
   </body>
