--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
       Check Out My Sample Work:
       Paper on the history of Hyperbolic Geometry: 
       <a href="Hyperbolic Research MHF-4404.pdf"></a>
+      <object type="application/pdf" data="Hyperbolic Research MHF-4404.pdf" " width="90%" height="90%"> 
+      </object>
+              
+
   
   
   </body>
