--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
     <h3>
       Check Out My Sample Work:
       Paper on the history of Hyperbolic Geometry: 
-      <object type="application/pdf" data="Hyperbolic Research MHF-4404.pdf" " width="90%" height="90%" <a href="Hyperbolic Research MHF-4404.pdf" alt="PDF Research paper on the history and evolution of Hyperbolic Geometry" >
-      </object >
+      <a href="Hyperbolic Research MHF-4404.pdf"></a>
+      <object type="application/pdf" data="Hyperbolic Research MHF-4404.pdf" 
+       " width="90%" height="90%" <a href="Hyperbolic Research MHF-4404.pdf" 
+       alt="Research paper PDF on the history and evolution of Hyperbolic Geometry">
+      </object>
               
 
   
