--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <html lang="en-US">
     <meta charset="UTF-8">
-    <title> Portfolio | Cody Hennessey </title>
+    <title> Portfolio | Cody Hennessey </title> <!-- Title>
   </head>
   <body id="About Me">
-    <h1> 
+    <h1>                               <!--Heading>
       About Me
     </h1>
       <p> 
@@ -46,7 +46,7 @@
     <h2>
       Noteworthy Classes 
     </h2>
-      <ul>
+      <ul>                                                  <!--Unordered list>
         <li> Abstract Algebra (two semester sequence) </li>
         <li> Real Analysis (also two semesters) </li>
         <li> Operations Research </li>
@@ -59,16 +59,17 @@
         <li> Electricity and Magnetism </li>
 </ul>  
     <h3>
-      Check Out My Sample Work:
-      Paper on the history of Hyperbolic Geometry: 
+      My Paper on the history of Hyperbolic Geometry:              <!--I was able to find help on uploading a PDF to my html page, but was unable to get the file name to be recognized--> 
       <a href="Hyperbolic Research MHF-4404.pdf"></a>
       <object type="application/pdf" data="Hyperbolic Research MHF-4404.pdf" 
        " width="90%" height="90%" <a href="Hyperbolic Research MHF-4404.pdf" 
-       alt="Research paper PDF on the history and evolution of Hyperbolic Geometry">
+       alt="Research paper PDF on the history and evolution of Hyperbolic Geometry">     <!--atl text (if the pdf worked!)-->
       </object>
-              
-
-  
-  
-  </body>
+     <h4>
+      My Links
+     </h4>
+      <p>HTML links are defined with the a tag:</p>
+       <a href="https://github.com/codyhennessey/codyhennessey.github.io/">GitHub Profile</a>
+       <a href="https://www.codecademy.com/CPHennessey">Code Academy profile</a>
+</body>
 </html>
