--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title> Portfolio | Cody Hennessey </title> <!-- Title>
   </head>
   <body id="About Me">
-    <h1>                               <!--Heading>
+    <h1>                               <!--Heading-->
       About Me
     </h1>
       <p> 
@@ -46,7 +46,7 @@
     <h2>
       Noteworthy Classes 
     </h2>
-      <ul>                                                  <!--Unordered list>
+      <ul>                                                  <!--Unordered list-->
         <li> Abstract Algebra (two semester sequence) </li>
         <li> Real Analysis (also two semesters) </li>
         <li> Operations Research </li>
