--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
         <li> Newtonian Mechanics </li>
         <li> Electricity and Magnetism </li>
 </ul>  
-    <h3>
-      My Paper on the history of Hyperbolic Geometry:              <!--I was able to find help on uploading a PDF to my html page, but was unable to get the file name to be recognized--> 
+    <h3> My Paper on the history of Hyperbolic Geometry: </h3>            <!--I was able to find help on uploading a PDF to my html page on , but was unable to get the file name to be recognized--> 
       <a href="Hyperbolic Research MHF-4404.pdf"></a>
-      <object type="application/pdf" data="Hyperbolic Research MHF-4404.pdf" 
+      <embed src="Hyperbolic Research MHF-4404.pdf" width="800px" height="2100px" />
+    <!--<object type="application/pdf" data="Hyperbolic Research MHF-4404.pdf" 
        " width="90%" height="90%" <a href="Hyperbolic Research MHF-4404.pdf" 
        alt="Research paper PDF on the history and evolution of Hyperbolic Geometry">     <!--atl text (if the pdf worked!)-->
-      </object>
+      </object>-->
      <h4>
       My Links
      </h4>
