--- a/index.html
+++ b/index.html
@@ -66,5 +66,7 @@
      </h4>
        <a href="https://github.com/codyhennessey/codyhennessey.github.io/">GitHub Profile</a>
        <a href="https://www.codecademy.com/CPHennessey">Code Academy profile</a>
+    <h5>Calabi Yau Manifold Gif</h5>
+      <img src="https://giphy.com/gifs/GmNXhpvHwOru0/html5" alt="https://giphy.com/gifs/GmNXhpvHwOru0/html5" width="104" height="142">
 </body>
 </html>
