--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
        <a href="https://github.com/codyhennessey/codyhennessey.github.io/">GitHub Profile</a>
        <a href="https://www.codecademy.com/CPHennessey">Code Academy profile</a>
     <h5>Calabi Yau Manifold Gif</h5>
-      <img src="https://media.giphy.com/media/GmNXhpvHwOru0/giphy.gif" alt="https://giphy.com/gifs/GmNXhpvHwOru0/html5" width="104" height="142">
+      <img src="https://media.giphy.com/media/GmNXhpvHwOru0/giphy.gif" alt="A representation of th 10 spatial dimmensions of in String Theory" height="142">
 </body>
 </html>
