--- a/index.html
+++ b/index.html
@@ -60,13 +60,21 @@
 </ul>  
     <h3> My Paper on the history of Hyperbolic Geometry: </h3>            <!--I was able to find help on uploading a PDF to my html page on , but was unable to get the file name to be recognized--> 
       <a href="Hyperbolic Research MHF-4404.pdf"></a>
-      <embed src="Hyperbolic Research MHF-4404.pdf" alt="PDH of my Reearch in the history of Hyperbolic Geometry" width="800px" height="1600px" />  <!--found this pdf embeding code format on stackoverflow-->
+      <embed src="Hyperbolic Research MHF-4404.pdf" 
+             alt="PDH of my Reearch in the history of Hyperbolic Geometry" 
+             width="800px" height="1600px" />                             <!--found this pdf embeding code format on stackoverflow-->
      <h4>
       My Links
      </h4>
-       <a href="https://github.com/codyhennessey/codyhennessey.github.io/">GitHub Profile</a>
-       <a href="https://www.codecademy.com/CPHennessey">Code Academy profile</a>
+       <a href="https://github.com/codyhennessey/codyhennessey.github.io/">
+         GitHub Profile
+       </a>
+       <a href="https://www.codecademy.com/CPHennessey">
+         Code Academy profile
+       </a>
     <h5>Calabi Yau Manifold Gif</h5>
-      <img src="https://media.giphy.com/media/GmNXhpvHwOru0/giphy.gif" alt="A representation of th 10 spatial dimmensions of in String Theory" height="300" width="300">
+      <img src="https://media.giphy.com/media/GmNXhpvHwOru0/giphy.gif" 
+           alt="A representation of th 10 spatial dimmensions of in String Theory" 
+           height="800" width="800">
 </body>
 </html>
