--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
         <li> Electricity and Magnetism </li>
 </ul>  
     <h3> My Paper on the history of Hyperbolic Geometry: </h3>            <!--I was able to find help on uploading a PDF to my html page on , but was unable to get the file name to be recognized--> 
-      <a href="Hyperbolic Research MHF-4404.pdf"></a>
-      <embed src="Hyperbolic Research MHF-4404.pdf" 
-             alt="PDH of my Reearch in the history of Hyperbolic Geometry" 
-             width="800px" height="1600px" />                             <!--found this pdf embeding code format on stackoverflow-->
+      <a href="Hyperbolic Research.pdf" download>Download PDF here</a>
+      
+    <!--found this pdf embeding code format on stackoverflow-->
      <h4>
       My Links
      </h4>
