--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <li> Electricity and Magnetism </li>
 </ul>  
     <h3> My Paper on the history of Hyperbolic Geometry: </h3>            <!--I was able to find help on uploading a PDF to my html page on , but was unable to get the file name to be recognized--> 
-      <a href="pdf_server.php?file= Hyperbolic Research.pdf">Download PDF here</a>
+      <a href="./directory/Hyperbolic_Research.pdf" download= Hyperbolic_Research>Download PDF here</a>
       
     <!--found this pdf embeding code format on stackoverflow-->
      <h4>
